--- a/templates/_results_templates.html
+++ b/templates/_results_templates.html
@@ -9,6 +9,7 @@
 {% else %}
   <script type="text/javascript" src="{{ url_for('cpd_settlements.static', filename='vendor/chosen/chosen.jquery.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('cpd_settlements.static', filename='vendor/jquery-serialize-object/jquery.serialize-object.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('cpd_settlements.static', filename='js/shared.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('cpd_settlements.static', filename='js/search.js') }}"></script>
 {% endif %}
 
