--- a/templates/_results_templates.html
+++ b/templates/_results_templates.html
@@ -118,9 +118,9 @@
   <% } %>
 
   <% if ( incidents !== "one" ) { %> 
-    settlements
+    cases
   <% } else { %>
-    settlement
+    case
   <% } %>
 
   <% if ( payment_amount !== "" && cblength == 0 && primary_cause == "" && ( neighborhood == "" || neighborhood == "unknown" ) ) { %> 
@@ -205,9 +205,9 @@
   <% if ( incidents == "no" ) { %> 
     Please try another search.</span>
   <% } else if ( incidents == "one" ) {  %>
-    This settlement cost Chicago</span> <span class="totals-amount">$<%= payments.formatMoney(0) %>.</span>
+    This lawsuit cost Chicago</span> <span class="totals-amount">$<%= payments.formatMoney(0) %>.</span>
   <% } else {  %>
-    These <%= incidents %> settlements cost Chicago a total of</span> <span class="totals-amount">$<%= payments.formatMoney(0) %>.</span>
+    These <%= incidents %> lawsuits cost Chicago a total of</span> <span class="totals-amount">$<%= payments.formatMoney(0) %>.</span>
   <% } %>
   </div>
 
