--- a/templates/_search.html
+++ b/templates/_search.html
@@ -1,3 +1,9 @@
+<div class="mobile-tabs">
+  <ul class="mobile-tab-selector">
+    <li class="cases"><a>Filter cases</a></li>
+    <li class="officers"><a>Officer search</a></li>
+  </ul>
+</div>
 <div class="search">
   <div id="tabs">
     <ul id="search-selector" class="tab-selector">
@@ -12,5 +18,9 @@
         {% include 'templates/_officer_search_form.html' %}
       </div>
     </div>
+  </div>
+  <div id="explore-data">
+    <span id="tap-to-open">Tap to explore the data</span>
+    <span id="tap-to-close">Tap to close these filters</span>
   </div>
 </div>
