--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1583,11 +1583,14 @@ Intro Page
 #cpd-scrolling .block h3 {
   font-size: 3em;
   line-height: 1.15;
-  margin-top: 2em;
   margin-bottom: 0;
   padding: 0 18%;
   text-shadow: 0px 0px 30px #000000;
   text-align: center;
+  margin-top: -60px !important;
+  top: 50%!important;
+  padding: 0 10%;
+  transform: translateY(-50%);
 }
 #cpd-scrolling .block h3 img {
   max-width: 20px;
@@ -1799,6 +1802,9 @@ body.not-nested {
 Media Queries
 ========================================================================== */
 @media screen and (max-width: 1000px) {
+  #cpd-scrolling .block h3 {
+    transform: scale(0.9) translateY(-50%);
+  }
   .menu-toggle-wrap {
     display: block;
   }
@@ -1943,6 +1949,9 @@ Media Queries
   }
 }
 @media screen and (max-width: 480px) {
+  #cpd-scrolling .block h3 {
+    transform: scale(0.75) translateY(-50%);
+  }
   .cpd-links {
     width: 100%;
     max-width: 100%;
