--- a/less/style.less
+++ b/less/style.less
@@ -2126,8 +2126,8 @@ Media Queries
 
     span {
       margin-top: -1px;
-      background-color: @cr-alert;
-      color: #fff;
+      background-color: @cr-lightest;
+      color: @cr-alert;
       display: inline-block;
       width: 100%;
       line-height:40px;
@@ -2136,7 +2136,7 @@ Media Queries
 
       &:hover {
         cursor:pointer;
-        background-color: darken(@cr-alert,10%);
+        background-color: darken(@cr-lightest,10%);
       }
     }
   }
