--- a/templates/_statement.html
+++ b/templates/_statement.html
@@ -1,4 +1,4 @@
 <div class="search-statement-wrapper">
-	<div id="search-intro">These <span class="count"></span> lawsuits cost Chicago a total of <span class="total"></span>.</div>
+	<div id="search-intro">Loading...</div>
 	<div id="case-search-statement"></div>
 </div>
