--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,10 @@ About Page
   text-transform: uppercase;
   margin-top: 0;
 }
+.not-found h1 {
+  text-transform: lowercase;
+  text-align: center;
+}
 /* ==========================================================================
 Search Screen               
 ========================================================================== */
@@ -184,7 +188,6 @@ Filters
 .clickable {
   background-color: #bd261d;
   padding-left: 3px;
-  white-space: nowrap;
 }
 .clickable .x {
   color: #ffffff;
@@ -211,6 +214,7 @@ Filters
   margin-top: 20px;
   color: #ffffff;
   opacity: .6;
+  display: inline-block;
 }
 .clear-filters .x {
   background-color: #000000;
@@ -580,6 +584,7 @@ a.block-link {
 .case .case-description {
   padding: 20px;
   color: #333333;
+  min-width: 1px;
   flex: 1;
 }
 .case .case-summary {
@@ -736,11 +741,11 @@ span.display-tag {
   padding: 0;
   line-height: 1.3;
   background-color: transparent;
-  display: inline;
 }
 .case-detail {
   background-color: #ffffff;
   padding: 20px;
+  overflow: hidden;
 }
 .case-detail h1 {
   margin-top: 0;
@@ -1317,16 +1322,17 @@ a:hover {
 Intro Page
 ========================================================================== */
 #intro-controls {
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 999;
+  display: inline-block;
   font-family: 'Open Sans Condensed', sans-serif;
-  font-size: 1.15em;
+  font-size: 1em;
+  font-weight: 700;
+  text-transform: uppercase;
+  top: 32px;
+  position: absolute;
+  margin-left: 20px;
 }
 #intro-controls > div {
-  padding: 4px 10px;
+  padding: 0 4px;
   border: 1px solid rgba(0, 0, 0, 0.6);
   border-bottom: none;
   background-color: #ffffff;
@@ -1341,7 +1347,7 @@ Intro Page
   display: none;
 }
 #intro-controls #replay-intro {
-  display: block;
+  display: inline;
 }
 #home {
   background-color: #000000;
@@ -1352,10 +1358,10 @@ Intro Page
 }
 #home.filter-cases #intro-controls #replay-intro,
 #home.filter-officers #intro-controls #replay-intro {
-  display: block;
+  display: inline;
 }
 #home #intro-controls #skip-intro {
-  display: block;
+  display: inline;
 }
 #home #intro-controls #replay-intro {
   display: none;
@@ -1378,7 +1384,7 @@ Intro Page
   top: 0;
   opacity: 0;
 }
-#home #bg-12 {
+#home #bg-final {
   background-image: url("../images/02-IMG_9158-blur.jpg");
 }
 #cpd-scrolling {
@@ -1523,100 +1529,89 @@ Intro Page
   opacity: .8;
   cursor: pointer;
 }
-#cpd-scrolling #desc {
+#cpd-scrolling #titles {
   width: 100%;
-  margin-top: 61px;
+  margin: 61px 0;
   /*height of header*/
-  padding: 0 20%;
+  padding: 0;
   text-align: center;
   position: absolute;
+  bottom: 0;
+  font-size: 7em;
   z-index: 2;
 }
-#cpd-scrolling #desc h1 {
-  font-size: 6em;
+#cpd-scrolling #titles h1 {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 1em;
+  font-weight: 300;
   text-transform: uppercase;
-  line-height: 1.5;
-  position: relative;
-  width: 0;
+  letter-spacing: .03em;
+  line-height: 1;
   margin: 0 auto;
 }
-#cpd-scrolling #desc h1 > span {
-  top: 15vh;
-  position: absolute;
-  padding: 4px 8px;
+#cpd-scrolling #titles h1 > span {
+  padding: 4px 10px;
+  display: inline-block;
+  background-color: rgba(0, 0, 0, 0.6);
 }
-#cpd-scrolling #desc h1 .settling {
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-size: 1.25em;
-  letter-spacing: .03em;
-  font-weight: normal;
-  background-color: rgba(255, 255, 255, 0.8);
-  color: #bd261d;
-  transform: translateX(-54%);
+#cpd-scrolling #titles h1 > span.for {
+  font-size: .75em;
+  color: rgba(255, 255, 255, 0.8);
+  background-color: transparent;
 }
-#cpd-scrolling #desc h1 .for {
-  display: inline;
-  text-transform: lowercase;
-  font-weight: 300;
-  font-size: .5em;
-  background-color: rgba(255, 255, 255, 0.8);
-  color: #000000;
-  z-index: 2;
-  margin-top: 130px;
-  transform: translateX(160%);
-}
-#cpd-scrolling #desc h1 .toomuch {
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-size: 1.25em;
-  background-color: rgba(189, 38, 29, 0.8);
-  color: #ffffff;
-  margin-top: 180px;
-  transform: translateX(-52%);
-}
-#cpd-scrolling #desc .subhead {
-  font-weight: 300;
+#cpd-scrolling #titles h2 {
+  font-weight: 700;
   line-height: 1;
-  font-size: .4em;
-  color: #3d9999;
-  width: 480px;
-  margin: 11em auto;
+  font-size: .2em;
+  width: 100%;
   text-transform: uppercase;
-  transform: translateX(-50%);
+  letter-spacing: .03em;
+  margin-top: 30px;
+  opacity: .8;
 }
-#cpd-scrolling #desc .scroll {
+#cpd-scrolling #titles h2 > span {
+  padding: 4px 10px;
+  background-color: #484848;
+  color: #dddddd;
+}
+#cpd-scrolling #titles p.scroll {
   color: #ffffff;
   display: block;
-  font-family: 'Open Sans Condensed';
-  text-transform: lowercase;
+  font-family: 'Open Sans Condensed', sans-serif;
+  text-transform: uppercase;
   text-shadow: 0 0 1px #000;
   line-height: 1;
-  margin-top: 2em;
-  font-size: .5em;
+  margin-top: 60px;
+  font-size: 16px;
 }
 #cpd-scrolling .block {
   width: 100%;
+  min-height: 100vh;
   text-align: left;
   z-index: 2;
   position: absolute;
 }
 #cpd-scrolling .inner-block {
   min-width: 100%;
-  min-height: 100vh;
   position: absolute;
-  margin-top: -100px !important;
-}
-#cpd-scrolling .block h3 {
-  width: 100%;
-  font-size: 3em;
-  line-height: 1.15;
-  margin-bottom: 0;
-  padding: 0 18%;
-  text-shadow: 0px 0px 30px #000000;
   text-align: center;
-  position: absolute;
-  margin-top: -100px;
+  margin-top: -60px;
+  padding: 0 18%;
   top: 50%;
   transform: translateY(-50%);
+}
+#cpd-scrolling .block h3 {
+  font-size: 3em;
+  line-height: 1.15;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 20px;
+  margin-bottom: 0;
+  text-shadow: 0px 0px 30px #000000;
+}
+#cpd-scrolling .block h3 .social-icons {
+  display: block;
+  margin-top: 1em;
+  position: static;
 }
 #cpd-scrolling .block h3 img {
   max-width: 20px;
@@ -1680,19 +1675,19 @@ Intro Page
   background-image: url("../images/10-052015CityCouncilFirstMeetingwithNewMembers49.jpg");
 }
 #cpd-scrolling #bg-6 {
-  background-image: url("../images/07-120915_NoonLoopMarch_MH_01---Copy.jpg");
+  background-image: url("../images/06-LE0A1948.jpg");
 }
 #cpd-scrolling #bg-7 {
   background-image: url("../images/07-121314_MillionsMarchChi-4.jpg");
 }
 #cpd-scrolling #bg-8 {
-  background-image: url("../images/06-091714_RallyForRoshad_IMG_1909.jpg");
+  background-image: url("../images/07-120915_NoonLoopMarch_MH_01---Copy.jpg");
 }
 #cpd-scrolling #bg-9 {
-  background-image: url("../images/06-121314_MillionsMarchChi-53.jpg");
+  background-image: url("../images/police-photos-06.jpg");
 }
 #cpd-scrolling #bg-10 {
-  background-image: url("../images/06-LE0A1948.jpg");
+  background-image: url("../images/06-121314_MillionsMarchChi-53.jpg");
 }
 #cpd-scrolling #bg-11 {
   background-image: url("../images/srupolo_legreir-funeral-5.jpg");
@@ -1700,7 +1695,31 @@ Intro Page
 #cpd-scrolling #bg-13 {
   background-image: url("../images/02-IMG_9158.jpg");
 }
-#cpd-scrolling #bg-11-overlay {
+#cpd-scrolling #bg-14 {
+  background-image: url("../images/22745724242_2abce85046_o.jpg");
+}
+#cpd-scrolling #bg-15 {
+  background-image: url("../images/09-staceyrupolo_encampments-13.jpg");
+}
+#cpd-scrolling #bg-16 {
+  background-image: url("../images/staceyrupolo_alfredo_homeless-01.jpg");
+}
+#cpd-scrolling #bg-17 {
+  background-image: url("../images/staceyrupolo_encampments-16.jpg");
+}
+#cpd-scrolling #bg-18 {
+  background-image: url("../images/02-jg_closures_protest_15.jpg");
+}
+#cpd-scrolling #bg-19 {
+  background-image: url("../images/06-091714_RallyForRoshad_IMG_1909.jpg");
+}
+#cpd-scrolling #bg-slast {
+  background-image: url("../images/02-IMG_9158.jpg");
+}
+#cpd-scrolling #bg-last {
+  background-image: url("../images/02-IMG_9158.jpg");
+}
+#cpd-scrolling #bg-last-overlay {
   background-color: rgba(0, 0, 0, 0.7);
   position: fixed;
   width: 100%;
@@ -1768,38 +1787,6 @@ Intro Page
 #cpd-scrolling .spacer.vh1.half {
   min-height: 50vh;
 }
-@media screen and (max-width: 760px) {
-  #home #desc {
-    padding: 0 5%;
-  }
-  #home #desc h1 {
-    transform: scale(0.75);
-  }
-  #home #desc h1 > span {
-    top: 15vh;
-  }
-  #home .block h3 {
-    font-size: 2em;
-  }
-  #home .spacer.vh1 {
-    min-height: 50vh;
-  }
-  #home .spacer.vh1.half {
-    min-height: 25vh;
-  }
-}
-@media screen and (max-width: 480px) {
-  #home #desc h1 {
-    transform: scale(0.5);
-  }
-  #home #desc h1 > span {
-    top: 35vh;
-  }
-  #home #desc h1 .subhead > span {
-    margin-top: .75em;
-    font-size: 1em;
-  }
-}
 /* ==========================================================================
 Framed vs Not Framed
 ========================================================================== */
@@ -1828,9 +1815,11 @@ body.not-nested {
 Media Queries
 ========================================================================== */
 @media screen and (max-width: 1000px) {
+  #cpd-scrolling #titles {
+    transform: scale(0.9);
+  }
   #cpd-scrolling .block h3 {
-    padding: 0 10%;
-    transform: scale(0.9) translateY(-50%);
+    transform: scale(0.9);
   }
   .menu-toggle-wrap {
     display: block;
@@ -1978,9 +1967,51 @@ Media Queries
     padding-right: 20px;
   }
 }
+@media screen and (max-width: 768px) {
+  #home #titles {
+    transform: scale(0.8);
+  }
+  #home #titles h1 > span.for {
+    display: block;
+    font-size: .5em;
+    color: rgba(255, 255, 255, 0.8);
+  }
+  #home .block h3 {
+    font-size: 2.5em;
+  }
+  #home .spacer.vh1 {
+    min-height: 50vh;
+  }
+  #home .spacer.vh1.half {
+    min-height: 25vh;
+  }
+  #intro-controls {
+    position: fixed;
+    top: auto;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 999;
+    margin-left: 0;
+  }
+}
 @media screen and (max-width: 480px) {
+  #cpd-scrolling {
+    margin-bottom: 100vh;
+  }
+  #cpd-scrolling #titles {
+    min-width: 100%;
+    font-size: 5.5em;
+  }
+  #cpd-scrolling .inner-block {
+    padding: 20px;
+  }
   #cpd-scrolling .block h3 {
-    transform: scale(0.75) translateY(-50%);
+    transform: scale(0.75);
+  }
+  .clickable {
+    white-space: normal;
+    word-wrap: break-word;
   }
   .cpd-links {
     width: 100%;
@@ -2046,6 +2077,9 @@ Media Queries
     max-width: 30px;
     margin-top: 0;
     font-size: .8em;
+  }
+  .detail-wrapper.case-expanded .case-detail h3 {
+    font-size: 1.5em;
   }
   .detail-wrapper.case-expanded .case-detail h1,
   .detail-wrapper.officer-expanded .officer-text {
