--- a/less/style.less
+++ b/less/style.less
@@ -90,6 +90,13 @@ About Page
   }
 }
 
+.not-found {
+  h1 {
+    text-transform:lowercase;
+    text-align: center;
+  }
+}
+
 /* ==========================================================================
 Search Screen               
 ========================================================================== */
@@ -222,7 +229,7 @@ Filters
   // position:relative;
   background-color: @cr-alert;
   padding-left:3px;
-  white-space: nowrap;
+  //white-space: nowrap;
 
   .x {
     color:@cr-lightest;
@@ -254,6 +261,7 @@ Filters
     margin-top: 20px;
     color:@cr-lightest;
     opacity:.6;
+    display:inline-block;
 
     .x {
       background-color:@cr-darkest;
@@ -677,6 +685,7 @@ a.block-link {
   .case-description {
     padding:20px;
     color:lighten(@cr-darkest,20%);
+    min-width:1px;
     flex: 1; 
   }
 
@@ -863,12 +872,12 @@ span.display-tag {
     padding: 0;
     line-height: 1.3;
     background-color: transparent;
-    display: inline;
 }
 
 .case-detail {
   background-color:@cr-lightest;
   padding:20px;
+  overflow:hidden;
 
   h1 {
     margin-top:0;
@@ -1499,15 +1508,17 @@ a:hover {
 Intro Page
 ========================================================================== */
 #intro-controls {
-  position:fixed;
-  bottom:0;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index:999;
+  display:inline-block;
   font-family:@cr-condensed;
-  font-size: 1.15em;
+  font-size: 1em;
+  font-weight:700;
+  text-transform: uppercase;
+  top: 32px;
+  position: absolute;
+  margin-left: 20px;
+
   &>div {
-    padding:4px 10px;
+    padding:0 4px;
     border:1px solid fade(@cr-darkest,60%);
     border-bottom:none;
     background-color:@cr-lightest;
@@ -1523,7 +1534,7 @@ Intro Page
     display:none;
   }
   #replay-intro {
-    display:block;
+    display:inline;
   }
 }
 #home {
@@ -1535,13 +1546,13 @@ Intro Page
         display:none;
       }
       #replay-intro {
-        display:block;
+        display:inline;
       }
     }
   }
   #intro-controls {
     #skip-intro {
-      display:block;
+      display:inline;
     }
     #replay-intro {
       display:none;
@@ -1566,7 +1577,7 @@ Intro Page
     top:0;
     opacity:0;
   }  
-  #bg-12 {
+  #bg-final {
     background-image: url("../images/02-IMG_9158-blur.jpg");
     // -webkit-filter: blur(5px);
     // -moz-filter: blur(5px);
@@ -1737,82 +1748,67 @@ Intro Page
   /*
     Containers
   */
-  #desc {
+  #titles {
     width:100%;
-    margin-top:61px; /*height of header*/
-    padding:0 20%;
+    margin:61px 0; /*height of header*/
+    padding:0;
     text-align:center;
     position: absolute;
-      z-index: 2;
+    bottom:0;
+    font-size: 7em;
+    z-index: 2;
   }
-  #desc h1 {
-    font-size: 6em;
+  #titles h1 {
+    font-family:@cr-condensed;
+    font-size:1em;
+    font-weight: 300;
     text-transform: uppercase;
-    line-height: 1.5;
-    position:relative;
-    width: 0;
+    line-height:1;
+    letter-spacing: .03em;
+    line-height: 1;
     margin: 0 auto;
-    //text-shadow: 0px 0px 30px rgba(0, 0, 0, 1);
-
     &>span {
-      top:15vh;
-      position:absolute;
-      padding:4px 8px;
+      padding:4px 10px;
+      display:inline-block;
+      background-color:fade(@cr-darkest,60%);
+    }
+    &>span.for {
+      font-size:.75em;
+      color:fade(@cr-lightest,80%);
+      background-color:transparent;
     }
   }
-  #desc h1 .settling {
-    font-family:@cr-condensed;
-    font-size:1.25em;
-    letter-spacing: .03em;
-    font-weight: normal;
-    background-color:fade(@cr-lightest,80%);
-    color:@cr-alert;
-    transform:translateX(-54%);
-  }
-  #desc h1 .for {
-    display:inline;
-    text-transform: lowercase;
-    font-weight:300;
-    font-size:.5em;
-    background-color:fade(@cr-lightest,80%);
-    color:@cr-darkest;
-    z-index: 2;
-    margin-top: 130px;
-    transform:translateX(160%);
-  }
-  #desc h1 .toomuch {
-    font-family:@cr-condensed;
-    font-size:1.25em;
-    background-color:fade(@cr-alert,80%);
-    color:@cr-lightest;
-    margin-top: 180px;
-    transform:translateX(-52%);
-  }
 
-  #desc .subhead {
-    font-weight: 300;
+  #titles h2 {
+    font-weight: 700;
     line-height: 1;
-    font-size: .4em;
-    color: #3d9999;
-    width: 480px;
-    margin: 11em auto;
+    font-size: .2em;    
+    width: 100%;
     text-transform: uppercase;
-    transform: translateX(-50%);
+    letter-spacing: .03em;
+    margin-top:30px;
+    opacity:.8;
+    &>span {
+      padding:4px 10px;
+      background-color:@cr-dark;
+      color: lighten(@cr-light,20%);
+    }
   }
 
-  #desc .scroll {
+  #titles p.scroll {
     color:@cr-lightest;
     display: block;
-    font-family: 'Open Sans Condensed';
-    text-transform: lowercase;
+    font-family:@cr-condensed;
+    text-transform: uppercase;
     text-shadow: 0 0 1px #000;
     line-height: 1;
-    margin-top:2em;
-    font-size:.5em;
+    margin-top:60px;
+    font-size:16px;
   }
 
   .block {
     width:100%;
+    min-height:100vh;
     text-align:left;
     z-index: 2;
     position:absolute;
@@ -1820,23 +1816,27 @@ Intro Page
 
   .inner-block {
     min-width:100%;
-    min-height:100vh;
     position:absolute;
-    margin-top: -100px!important;
+    text-align:center;
+    margin-top: -60px;
+    padding:0 18%;
+    top:50%;
+    transform:translateY(-50%);
   }
 
   .block h3 {
-    width:100%;
     font-size: 3em;
     line-height: 1.15;
+    background-color:rgba(0,0,0,.7);
+    padding:20px;
     margin-bottom:0;
-    padding:0 18%;
     text-shadow: 0px 0px 30px rgba(0, 0, 0, 1);
-    text-align:center;
-    position:absolute;
-    margin-top: -100px;
-    top:50%;
-    transform:translateY(-50%);
+    
+    .social-icons {
+      display: block;
+      margin-top: 1em;
+      position: static;
+    }
 
       img {
         max-width:20px;
@@ -1905,29 +1905,56 @@ Intro Page
     background-image: url("../images/10-052015CityCouncilFirstMeetingwithNewMembers49.jpg");
   }
   #bg-6 {
-    background-image: url("../images/07-120915_NoonLoopMarch_MH_01---Copy.jpg");   
+    background-image: url("../images/06-LE0A1948.jpg");   
   }
   #bg-7 {
     background-image: url("../images/07-121314_MillionsMarchChi-4.jpg");
   }
   #bg-8 {
-    background-image: url("../images/06-091714_RallyForRoshad_IMG_1909.jpg");
+    //background-image: url("../images/06-091714_RallyForRoshad_IMG_1909.jpg");
+    background-image: url("../images/07-120915_NoonLoopMarch_MH_01---Copy.jpg"); 
   }
   #bg-9 {
-    background-image: url("../images/06-121314_MillionsMarchChi-53.jpg");
+    background-image: url("../images/police-photos-06.jpg");
   }
   #bg-10 {
-    background-image: url("../images/06-LE0A1948.jpg"); 
+    background-image: url("../images/06-121314_MillionsMarchChi-53.jpg");
     //background-image: url("../images/07-120915_NoonLoopMarch_MH_01---Copy.jpg");
   }
   #bg-11 {
     background-image: url("../images/srupolo_legreir-funeral-5.jpg");
   }
-  //#bg-12 is transition image from intro to blurry app background
+  #bg-12 {
+
+  }
   #bg-13 {
     background-image: url("../images/02-IMG_9158.jpg");
+  } 
+  #bg-14 {
+    background-image: url("../images/22745724242_2abce85046_o.jpg");
+  }  
+  #bg-15 {
+    background-image: url("../images/09-staceyrupolo_encampments-13.jpg");
   }
-  #bg-11-overlay {
+  #bg-16 {
+    background-image: url("../images/staceyrupolo_alfredo_homeless-01.jpg");
+  }  
+  #bg-17 {
+    background-image: url("../images/staceyrupolo_encampments-16.jpg");
+  }
+  #bg-18 {
+    background-image: url("../images/02-jg_closures_protest_15.jpg")
+  }
+  #bg-19 {
+    background-image: url("../images/06-091714_RallyForRoshad_IMG_1909.jpg");
+  }
+  #bg-slast {
+    background-image: url("../images/02-IMG_9158.jpg");
+  } 
+  #bg-last {
+    background-image: url("../images/02-IMG_9158.jpg");
+  }
+  #bg-last-overlay {
     background-color:rgba(0,0,0,.7);
     position:fixed;
     width:100%;
@@ -1999,46 +2026,6 @@ Intro Page
   }
 }
 
-@media screen and (max-width: 760px) {
-  #home {
-    #desc {
-      padding: 0 5%;
-    }
-
-    #desc h1 {
-      transform: scale(.75);
-      &>span {
-        top:15vh;
-      }
-    }
-
-    .block h3 {
-      font-size:2em;
-    }
-
-    .spacer.vh1{
-      min-height: 50vh;
-    }
-    .spacer.vh1.half{
-      min-height: 25vh;
-    }
-  }
-}
-
-@media screen and (max-width: 480px) {
-  #home {
-    #desc h1 {
-      transform: scale(.5);
-      &>span {
-        top:35vh;
-      }
-      .subhead>span {
-        margin-top: .75em;
-        font-size: 1em;
-      }
-    }
-  }
-}
 
 
 
@@ -2081,9 +2068,11 @@ Media Queries
 
 @media screen and (max-width: 1000px) {
   #cpd-scrolling {
+    #titles {
+      transform: scale(.9);
+    }
     .block h3{
-      padding:0 10%;
-      transform: scale(.9) translateY(-50%);
+      transform: scale(.9);
     }
   }
 
@@ -2252,12 +2241,62 @@ Media Queries
   }
 }
 
+
+@media screen and (max-width: 768px) {
+  #home {
+    #titles {
+      transform: scale(.8);
+    }
+    #titles h1 {
+      &>span.for {
+        display:block;
+        font-size:.5em;
+        color:fade(@cr-lightest,80%);
+      }
+    }
+
+    .block h3 {
+      font-size:2.5em;
+    }
+
+    .spacer.vh1{
+      min-height: 50vh;
+    }
+    .spacer.vh1.half{
+      min-height: 25vh;
+    }
+  }
+  #intro-controls {
+    position:fixed;
+    top:auto;
+    bottom:10px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index:999;
+    margin-left:0;
+  }
+}
 @media screen and (max-width: 480px) {
 
   #cpd-scrolling {
-    .block h3{
-      transform: scale(.75) translateY(-50%);
+    margin-bottom:100vh;
+
+    #titles {
+      //transform: scale(.6);
+      min-width:100%;
+      font-size:5.5em;
     }
+    .inner-block {
+      padding:20px;
+    }
+    .block h3{
+      transform: scale(.75);
+    }
+  }
+
+  .clickable {
+    white-space: normal;
+    word-wrap: break-word;
   }
 
   .cpd-links {
@@ -2332,6 +2371,9 @@ Media Queries
     max-width: 30px;
     margin-top: 0;
     font-size: .8em;
+  }
+  .detail-wrapper.case-expanded .case-detail h3 {
+    font-size:1.5em;
   }
   .detail-wrapper.case-expanded .case-detail h1,.detail-wrapper.officer-expanded .officer-text {
     margin-top: 60px;
