label updates, officer sort, better twitter, grunt build

--- a/templates/_case.html
+++ b/templates/_case.html
@@ -35,7 +35,7 @@
       {% if (case.narrative != 'NULL') %}
         <div class="case-summary">
           <a href="{{ site_path }}case/{{ case.case_number }}" class="case-link">
-            <span class="card-label">Case summary: </span>
+            <span class="card-label">Allegations: </span>
             <p>{{ case.narrative }}</p>
           </a>
         </div>
@@ -43,7 +43,7 @@
       
       {% if case.officers > 0 %}
         <div class="case-officers">
-          <span class="card-label">Officers involved:</span>
+          <span class="card-label">Officers named:</span>
           <div class="officer-group">
             {% for officer in case.officers %}
               {% include 'templates/_officer.html' %}
