--- a/templates/_officer.html
+++ b/templates/_officer.html
@@ -1,4 +1,4 @@
-<div class="officer">
+<div class="officer" data-slug="{{ officer.slug }}">
 	{% if officer.slug %}
 		<div class="officer-logo"><a href="http://{{ ROOT_URL }}/officer/{{ officer.slug }}" class="officer-link"></a></div>
 	{% else %}
