--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1811,6 +1811,35 @@ body.not-nested {
   background-color: #000000;
   display: block;
 }
+.disclaimer-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 9999;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.disclaimer-container {
+  width: 100%;
+  max-width: 700px;
+  background-color: #ffffff;
+  border: 1px solid #000000;
+  padding: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: 20px;
+  transform: translateX(-50%) translateY(-50%);
+}
+.disclaimer-close {
+  text-align: right;
+  opacity: .6;
+  margin-bottom: -1em;
+}
+.disclaimer-close:hover {
+  cursor: pointer;
+}
 /* ==========================================================================
 Media Queries
 ========================================================================== */
