--- a/less/style.less
+++ b/less/style.less
@@ -2061,6 +2061,39 @@ body.not-nested {
   display:block;
 }
 
+.disclaimer-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index:9999;
+  background-color: fade(@cr-darkest,70%);
+}
+
+.disclaimer-container {
+  width:100%;
+  max-width:700px;
+  background-color:@cr-lightest;
+  border:1px solid @cr-darkest;
+  padding:20px;
+  position:absolute;
+  top:50%;
+  left:50%;
+  margin:20px;
+  transform:translateX(-50%) translateY(-50%);
+}
+
+.disclaimer-close {
+  text-align: right;
+  opacity: .6;
+  margin-bottom:-1em;
+
+  &:hover {
+    cursor:pointer;
+  }
+}
+
 
 /* ==========================================================================
 Media Queries
